# mobileone.c

./: .gitignore  CMakeLists.txt  README.md  massif.out.108417  vector.txt
include/: adaptive_pool2d.h  conv2d.h  image.h  linear.h  load.h  mat.h
pytorch/: debug_hidden.py  image2vec.py  save_mobileone.py
src/: adaptive_pool2d.c  conv2d.c  image.c  linear.c  load.c  main.c
